# minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  fill_list.c  ft_cd.c  ft_check_redirects.c  ft_echo.c  ft_env.c  ft_error.c  ft_exec.c  ft_exit.c  ft_export.c  ft_find_path.c  ft_pipe.c  ft_pwd.c  ft_redirect.c  ft_unset.c  ft_write.c  get_value_from_env.c  lists_func.c  main.c  make_env_list.c  minishell.h  parcer.h  parser.h  pipe.c  process_envs.c  processing.h  start.c  test  test.c  test_check_list.txt  utils.c  utils_main.c
functional/: check_command.c  fill_list.c  free_utils.c  ft_cd.c  ft_check_redirects.c  ft_echo.c  ft_env.c  ft_error.c  ft_exec.c  ft_exit.c  ft_export.c  ft_find_path.c  ft_pipe.c  ft_pwd.c  ft_redirect.c  ft_unset.c  ft_write.c  get_value_from_env.c  lists_func.c  make_env_list.c  processing.h  start.c  utils.c
gnl/: get_next_line.c  get_next_line.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstlast.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  (+2 more)
parser/: command.c  parse.c  parse.h  parse_command.c  parse_redirects.c  validate.c
parser/utils/: ft_split.c  ft_strdup.c  mask.c  utils.h
utils/: Makefile  arr_strjoin.c  clear_empty_list.c  empty_str.c  errors.c  find_char.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstnew.c  ft_lstsize.c  ft_split.c  ft_strdup.c  ft_strjoin.c  ft_strldup.c  ft_strlen.c  mask.c  parse_env.c  process_export.c  utils.h
